--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,10 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+
+
+        <item name="cardBackgroundColor">@color/_FF7A7A7A</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
