--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="_303030">#303030</color>
     <color name="_FF7A7A7A">#7A7A7A</color>
+
+    <color name="_BEBEBE">#BEBEBE</color>
+    <color name="_323232E">#323232</color>
 </resources>
