--- a/app/src/main/res/drawable/circular_shape.xml
+++ b/app/src/main/res/drawable/circular_shape.xml
@@ -5,5 +5,5 @@
     android:shape="ring"
     android:thickness="12dp"
     android:useLevel="false">
-    <solid android:color="?attr/colorOnPrimary" />
+    <solid android:color="@color/_323232E" />
 </shape>
