--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,10 +26,14 @@
 
                 <Button
                     android:id="@+id/button6"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:text="Button"
+                    android:layout_marginBottom="32dp"
+                    android:text="HISTORY"
+                    app:icon="@drawable/baseline_history_24"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
@@ -38,38 +42,51 @@
                     android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
                     android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/progress_layout">
 
-                    <Button
 
+                    <Button
                         android:id="@+id/button3"
+                        style="@style/Widget.Material3.Button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
                         android:layout_weight="1"
-                        android:text="Button"
-                        android:background="#252525"
-                        android:padding="12dp"
-                        android:shadowRadius="23"/>
+                        android:backgroundTint="#252525"
+                        android:text="@string/day"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                        android:textColor="#7DD6F3" />
 
 
                     <Button
                         android:id="@+id/button4"
+                        style="@style/Widget.Material3.Button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
                         android:layout_weight="1"
-                        android:text="Button" />
+                        android:backgroundTint="#252525"
+                        android:text="@string/week"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                        android:textColor="#DF42AE" />
 
                     <Button
                         android:id="@+id/button5"
+                        style="@style/Widget.Material3.Button.TextButton.Dialog.Icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
+
                         android:layout_weight="1"
-                        android:text="Button" />
+                        android:backgroundTint="#252525"
+                        android:text="@string/month"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                        android:textColor="#78D3CE" />
                 </LinearLayout>
 
                 <RelativeLayout
@@ -238,17 +255,4 @@
         </LinearLayout>
     </ScrollView>
 
-    <TextView
-        android:id="@+id/text_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
