--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.WorkV1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.WorkV1" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -18,5 +18,9 @@
 
 
 
+
     </style>
+
+    <color name="button_background_color">@color/black</color>
+    <color name="background_color">#191919</color>
 </resources>
