--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.WorkV1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.WorkV1" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,11 +14,15 @@
 
 
 
-        <item name="cardBackgroundColor">@color/_FF7A7A7A</item>
+        <item name="cardBackgroundColor">#649BFF</item>
 
 
-        <item name="cardViewStyle">@color/_FF7A7A7A</item>
+
 
         <!-- Customize your theme here. -->
     </style>
+
+    <color name="button_background_color">@color/white</color>
+
+    <color name="background_color">#e6e6e6</color>
 </resources>
